# reversebottom

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: philosophy.md
examples/: argument_breakdown.md  personal_decision.md  startup_critique.md
reversebottom/: __init__.py  api.py  client.py  config.py  main.py  router.py
reversebottom/modes/: __init__.py  base.py  destroy.py  reverse.py  shadow.py
reversebottom/prompts/: __init__.py  destroy.py  reverse.py  shadow.py
tests/: test_api.py  test_prompts.py  test_router.py
